Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -66,7 +66,7 @@ ranked1v1.rankingDistribution = Distribuzione della Valutazione
 ranked1v1.rankingDistribution.x = Valutazione
 ranked1v1.rankingDistribution.y = Giocatori
 ranked1v1.ratingProgress.stillLearning = Il sistema sta ancora calcolando il tuo skill. Gioca più partite per completare la procedura.
-ranked1v1.ratingHint.low = La tua valutazione è bassa. Chiedi un allenatore per cominciare dalle basi del gioco.
+ranked1v1.ratingHint.low = La tua valutazione è bassa. Chiedi a un allenatore per cominciare dalle basi del gioco.
 ranked1v1.ratingHint.moderate = La tua valutazione è media. Continua ad imparare le meccaniche di gioco per migliorare.
 ranked1v1.ratingHint.good = La tua valutazione è buona. Concentrati sui dettagli per migliorare.
 ranked1v1.ratingHint.high = La tua valutazione è alta. Perché non aiuti gli altri a migliorare?
@@ -111,7 +111,7 @@ chat.userContext.viewLiveReplay = Guarda partita
 chat.userContext.joinGame = Entra in partita
 chat.userContext.viewReplays = Vedi replay
 # Fuzzy
-chat.userContext.inviteToGame = Invito alla partita
+chat.userContext.inviteToGame = Invita al party
 chat.userContext.kick = Espelli...
 chat.userContext.ban = Ban...
 chat.sendMessageTask.title = Invio messaggio chat...
@@ -265,13 +265,13 @@ vault.localReplays = Replay Locali
 # Fuzzy
 vault.liveReplays = Replay dal vivo
 vault.replays.loading = Caricamento replay...
-vault.replays.newest = Più recente
+vault.replays.newest = Più recenti
 vault.replays.highestRated = Valutazione più alta
 vault.replays.displayQuery = Visualizza query di ricerca
 vault.replays.queryPrompt = Scrivi una query sopra o inseriscine una manualmente
 vault.replays.searchError = Errore durante la ricerca dei replay.
 vault.more = Più...
-modVault.newestMods = Più recente
+modVault.newestMods = Più recenti
 modVault.install = Installa
 modVault.uninstall = Disinstalla
 # Fuzzy
@@ -310,9 +310,9 @@ mapVault.upload.playersFormat = {0,number,#}
 mapVault.upload.rankedConfirm = Confermo che questa mappa è adeguatamente bilanciata e non contiene codice proibito- Sono consapevole che una violazione risulterà in un ban.\nDeselezionare questo risulterà in una mappa non classificata.
 mapVault.upload.retry = Riprova
 mapVault.loadingMaps = Caricamento mappe...
-mapVault.mostLikedMaps = Più piaciuta
-mapVault.newestMaps = Più recente
-mapVault.mostPlayed = Più giocata
+mapVault.mostLikedMaps = Più piaciute
+mapVault.newestMaps = Più recenti
+mapVault.mostPlayed = Più giocate
 mapVault.installButtonFormat = Installa ({0})
 mapVault.uninstall = Disinstalla
 mod.description = Descrizione
@@ -448,7 +448,7 @@ settings.chat.colors = Colori
 # Fuzzy
 settings.chat.timeFormat = Formato tempo
 # Fuzzy
-settings.chat.colorMode.default = Default\: Usa colori di default per tutti gli utenti
+settings.chat.colorMode.default = Default\: Permetti colori personalizzati per utenti e categorie specifiche
 settings.chat.colorMode.custom = Personalizzato\: Permetti colori personalizzati per utenti specifici
 settings.chat.colorMode.random = Casuale\: Ogni utente ha un colore casuale unico
 settings.chat.foes = Nemici
@@ -539,9 +539,9 @@ coop.watchReplay = Guarda
 ranked1v1.you = Tu
 game.join.passwordTitle = Questa partita è protetta da password
 modVault.highestRated = Valutazione più alta
-modVault.highestRatedUiMods = Mod UI raccomandate
+modVault.highestRatedUiMods = Raccomandate UI
 mod.detail.reviews = Recensioni
-mod.detail.moreInfo = Più informazioni
+mod.detail.moreInfo = Maggiori informazioni
 mod.detail.updated = Aggiornata
 mod.detail.size = Dimensione
 mod.detail.installations = Installazioni
@@ -676,7 +676,7 @@ view.hideSidePane = Nascondi dettagli
 menu.revealReplayFolder = Trova cartella replay
 # Fuzzy
 menu.revealGamePrefsFile = Trova file game.prefs
-ranked1v1.queuePopTimer = Selezione avversario con skill simile in {0,number,0}\:{1,number,00}
+ranked1v1.queuePopTimer = Selezione avversario in {0,number,0}\:{1,number,00}
 # Fuzzy
 game.create.generatedMap = Genera mappa
 game.avgRating.format = {0,number,#}
@@ -697,7 +697,7 @@ login.withEmailWarning = Perfavore connettiti con la tua username e non con l'em
 vault.next = Successivo
 vault.previous = Precedente
 vault.currentPage = Pagina\: {0,number,#}
-mapVault.recommended = M&M Squadre Prescelte
+mapVault.recommended = Più selezionate dalle Squadre in M&M
 settings.appearance.useNone = Non usare immagine
 settings.chat.addAutoJoinChannel = Aggiungi canale
 settings.chat.removeAutoJoinChannel = Rimuovi
@@ -893,3 +893,232 @@ vault.replays.copyReplayPath = Copia Path Replay
 game.generateMap.less = Meno
 game.generateMap.more = Più
 discord.join = Unisciti a FAF su Discord
+game.reasonNotValid = La partita non è stata valutata. Motivo\: {0}
+game.reasonNotValid.desync = Troppi Desync
+game.reasonNotValid.wrongCondition = Condizione di Vittoria Sbagliata
+game.reasonNotValid.fogOfWar = No Fog of War
+game.reasonNotValid.cheats = Cheats Abilitate
+game.reasonNotValid.prebuilt = Prebuilt Abilitato
+game.reasonNotValid.noRush = No Rush Abilitato
+game.reasonNotValid.unitRestriction = Restrizioni Unità
+game.reasonNotValid.unrankedMap = Mappa Non Classificata
+game.reasonNotValid.short = Partita Troppo Breve
+game.reasonNotValid.unrankedMod = Mod Non Classificata
+game.reasonNotValid.coop = Partita Coop
+game.reasonNotValid.draw = Pareggio Reciproco
+game.reasonNotValid.singlePlayer = Giocatore Singolo
+game.reasonNotValid.ffa = FFA
+game.reasonNotValid.unevenTeams = Squadre Sbilanciate
+game.reasonNotValid.unknown = Risultato Sconosciuto
+game.reasonNotValid.teamsUnlocked = Squadre Sbloccate
+game.reasonNotValid.multipleTeams = Squadre Multiple
+game.reasonNotValid.ai = AI Presente
+game.reasonNotValid.civiliansRevealed = Civili Rivelati
+game.reasonNotValid.difficulty = Difficoltà Sbagliata
+game.reasonNotValid.expansion = Espansione Disabilitata
+game.reasonNotValid.spawn = Spawn Non Corretti
+game.reasonNotValid.other = Altro
+game.valid = Partita Valutata
+exitWarning.title = Attenzione
+exitWarning.message = Forged Alliance è ancora in esecuzione, sei sicuro di voler chiudere il client?
+chat.userContext.broadcast = Messaggio broadcast...
+corruptedModsError.notification = Un errore inaspettato non ha permesso di caricare la seguente mod\: {0}.
+settings.data = Dati e cache
+settings.data.gameDataCache.time = Validità cache dati di gioco in giorni
+settings.data.gameDataCache.time.description = Definisce per quanto tempo i file dati di gioco sono tenuti in cache. Impostalo ad un valore alto per evitare download. Impostalo ad un valore basso per evitare un alto utilizzo del disco.
+settings.data.gameDataCache = Cache dati di gioco
+settings.data.gameDataCache.description = Effettua il cache dei dati di gioco salvando versioni non usate. Diminuisce significativamente la quantità di file scaricati specialmente guardando vecchi replay.
+settings.data.clearCache = Svuota cache
+settings.data.clearCache.description = Non ancora implementato. Aiutaci a creare questo pulsante.
+settings.data.clearCache.button = Svuota tutte le cache
+settings.general.cacheLifeTime = File in cache per (in giorni)\:
+games.create.enforceRating = Forza valutazione
+chat.filter.countryPrompt = Codice Paese
+game.generateMap.generationType = Tipo Generazione
+game.generateMap.casual = Casual
+game.generateMap.tournament = Tournament
+game.generateMap.blind = Blind
+settings.date.system = Auto
+settings.date.mdy = Mese/Giorno/Anno
+settings.date.dmy = Giorno/Mese/Anno
+settings.chat.dateFormat = Formato Data
+settings.chat.dateFormat.description = Il formato in cui dovrebbero essere visualizzate le date in chat.
+chat.error.noHashTag = Nome Canale deve iniziare con \# (Prova \#{0})
+game.gameStatus.hosting = Ospitando
+mod.idNumber = \#{0}
+label.copy = copia
+settings.fa.allowReplayWhileInGame = Permetti visualizzazione replay durante la partita
+settings.fa.patchGamePrefs = Patch Game.prefs
+settings.fa.allowReplayWhileInGame.description = Se attivi questa funzionalità sperimentale puoi guardare i replay durante la partita. Oltre a spuntare la casella hai bisogno di attivare la funzione nel tuo file game.prefs\: se clicchi il pulsante qui in basso lo facciamo al posto tuo. Se è disabilitato il tuo game.prefs è già stato patchato. Fai attenzione che avviare versioni del gioco che fanno conflitti causerà errori.
+settings.fa.patchGamePrefsFailed = Applicazione patch al file game.prefs fallita.
+settings.fa.allowReplayWhileInGame.experimental = sperimentale
+error.game.filesNotAccessible = Alcuni file del gioco installato non sono stati copiati su FAF ma a meno che non hai modificato recentemente i file di gioco nella versione installata, probabilmente non avrai problemi. Avvieremo lo stesso il gioco per te.
+game.gameRunning = Non è stato possibile avviare il gioco perché è già presente un'altra istanza di Forged Alliance in esecuzione.
+replay.gameRunning = Non è stato possibile avviare il replay perché è già presente un'altra istanza di Forged Alliance in esecuzione. Puoi attivare la funzione sperimentale per guardare i replay nelle impostazioni della lobby.
+gameUpdate.error.gameNotWritableAllowMultiOn = Non è stato possibile patchare il gioco alla versione richiesta per questo avvio. Stai provando a guardare un replay o aprire una partita di una versione che crea conflitto con quella che hai già aperta.
+game.create.generationType = Tipo di mappa generata\:\nCasual - Preview generate per Client e Lobby.\nTournament - Forza tutto random, preview del Client non generata e time stamp aggiunto alla descrizione della mappa.\nBlind - Forza tutto random, preview non generate per Client e Lobby e time stamp aggiunto alla descrizione della mappa.\nUnexplored - Risorse e terreno della mappa devono essere scoperte dalle unità.
+chat.userColor = Colore
+review.currentVersion = Versione Corrente
+review.version = Versione {0}
+review.date = {0} su {1}
+modVault.upload.rules = Confermo di aver letto le regole riguardanti l'upload delle mod.
+saveQuery = Salva Query
+logical = Ricerca Avanz.
+filter = Filtro Ricerca
+main.replay = Replay
+main.maps = Mappe
+main.mods = Mod
+game.date = Data Partita
+game.onlyRanked = Solo Classificata
+game.map.author = Autore Mappa
+vault.savedQueries = Preferiti
+vault.saveQuery = Salva Query
+map.onlyRanked = Solo Classificata
+map.reviewScore = Vedi Punteggio
+map.widthPixels = Larghezza (in px)
+map.heightPixels = Altezza (in px)
+query.moreFilters = Più Filtri
+query.textFilter = {0}\: {1}
+query.categoryFilter = {0}\: {1}
+query.rangeFilter = {0}\: {1} to {2}
+query.dateRangeFilter = {0}\: from {1} to {2}
+query.afterDate = Dopo
+query.beforeDate = Prima
+mod.onlyRanked = Solo Classificata
+mod.reviewScore = Vedi Punteggio
+search.lowValue = Minimo
+search.highValue = Massimo
+search.afterDate = Data Inizio
+search.beforeDate = Data Fine
+search.removeQuery = Elimina Query
+game.globalRating = Valutazione Globale
+game.ladderRating = Valutazione Ladder
+leaderboard.divisionName = In Posizione
+play.teamMatchmaking = Matchmaking
+teammatchmaking.leaveParty = Lascia party
+teammatchmaking.invitePlayer = Invita Giocatori
+teammatchmaking.invite = Invita
+teammatchmaking.invitedPlayers = Giocatori invitati\:
+teammatchmaking.mapPool = Lista Mappe
+teammatchmaking.playersInQueue = In Coda\: {0,number,#}
+teammatchmaking.queuePopTimer = Selezione avversario in\: {0,number,0}\:{1,number,00}
+teammatchmaking.gameCount = Partite giocate\: {0,number,#}
+teammatchmaking.notification.invite.title = Invitato al party
+teammatchmaking.notification.invite.message = {0} ti ha invitato ad entrare nel party
+teammatchmaking.notification.invite.join = Entra
+teammatchmaking.match.found = Sfida trovata\!
+teammatchmaking.match.starting = Avvio Sfida...
+teammatchmaking.match.cancelled = Sfida annullata\!
+teammatchmaking.notification.matchFound.title = Sfida trovata
+teammatchmaking.notification.matchFound.message = Una sfida è stata trovata e verrà avviata presto
+teammatchmaking.notification.inviteAlreadyInQueue.title = Sei già in una coda
+teammatchmaking.notification.inviteAlreadyInQueue.message = Perfavore lascia tutte le code prima di invitare un giocatore
+teammatchmaking.notification.joinAlreadyInQueue.title = Sei già in una coda
+teammatchmaking.notification.joinAlreadyInQueue.message = Perfavore lascia tutte le code prima di entrare in un party
+teammatchmaking.notification.customAlreadyInQueue.title = Sei già in una coda di matchmaking
+teammatchmaking.notification.customAlreadyInQueue.message = Perfavore lascia tutte le code prima di entrare in una partita personalizzata
+teammatchmaking.notification.gameAlreadyRunning.title = Già in partita
+teammatchmaking.notification.gameAlreadyRunning.message = Non puoi entrare in una coda mentre sei in partita
+teammatchmaking.playerTitle = Giocare in matchmaking come\:
+teammatchmaking.partyTitle = Il tuo party\:
+teammatchmaking.queueTitle = Entra in una o più code quando sei pronto\:
+teammatchmaking.queueTitle.inGame = Impossibile entrare in coda mentre sei in una partita
+teammatchmaking.queueTitle.memberInGame = Impossibile entrare in coda mentre qualcuno è in una partita
+teammatchmaking.queueTitle.inParty = Il leader del party entrerà nelle code
+teammatchmaking.queueTitle.inQueue = Il tuo party è ora in coda
+teammatchmaking.queue.ladder1v1 = Coda 1v1
+teammatchmaking.queue.tmm2v2 = Coda 2v2
+chat.groupChat.playerDisconnect = {0} si è disconnesso
+chat.groupChat.playerConnect = {0} si è connesso
+game.generateMap.mexSlider = Mex
+game.generateMap.reclaimSlider = Reclaim
+game.generateMap.unexplored = Unexplored
+replay.enrich.error = Non è stato possibile scaricare informazioni
+review.delete.error = Non è stato possibile eliminare questa recensione 
+review.save.error = Non è stato possibile salvare questa recensione
+settings.general.debugLog = Abilita log di DEBUG
+settings.general.debugLog.description = Aumenta il livello del log di DEBUG per risoluzione di problemi.
+settings.general.debugLog.button = Avvia
+replay.inQueue = Non è stato possibile avviare il replay perché sei in una coda di matchmaking. Lascia la coda per guardare i replay.
+replay.inParty = Non è stato possibile avviare il replay perché sei in un party. Lascia il party per guardare i replay.
+leaderboard.tmm_2v2.name = 2v2
+leaderboard.ladder_1v1.name = 1v1
+leaderboard.global.name = Globale
+leaderboard.gamesPlayed = {0} Partite Giocate\: {1,number,#}
+leaderboard.rating = {0} Valutazione
+leaderboard.displayName = Classifica
+userInfo.tooltipFormat.withRating = {0} ({1,number,#})
+userInfo.tooltipFormat.noRating = {0}
+map.updater.search = Ricerca di una nuova versione della mappa
+teammatchmaking.chat.topic = Trova compagni di squadra e ricevi avvisi sul gameplay sul nostro discord ufficiale\:
+getHelp = Ricevi Aiuto
+copyError = Copia Errore
+findHelp = Se questo errore persiste usa il pulsante "Ricevi Aiuto" per aprire il forum di aiuto. Verifica prima le FAQ e i topic esistenti. Se crei un nuovo topic perfavore includi i log che possono essere aperti dal menù in alto a sinistra del client.
+game.crash = Sembra che Supreme Commander\: Forged Alliance ha crashato, verifica il log di gioco {0} per ulteriori informazioni
+replayNotAvailable = Il replay {0,number,#} non è ancora disponibile su server. Perfavore riprova successivamente.
+close = Chiudi
+userMenu.moderationReport = Segnalazioni di Moderazione
+game.report = Segnalazione di Gioco
+report.description.placeholder = Perfavore fornisci una breve ma completa descrizione del problema che stai segnalando. Se non ci sono log disponibili del problema (es. non è qualcosa accaduto in \#aeolus o in-game), perfavore fornisci degli screenshot. Puoi usare qualsiasi sito di image hosting, tipo http\://imgur.com/.
+report.description = Segnalazione Problema
+report.id = ID
+report.createTime = Creato alle
+report.offender = Colpevole
+report.moderator = Moderatore
+report.notice = Avviso
+report.status = Stato
+report.gameID = ID Replay
+report.gameTime = Codice Game Time
+report.gamePrompt = (se il problema è accaduto durante una partita)
+report.userSearch = Colpevole
+report.title = Segnalazione di Moderazione
+report.newReport = Nuova Segnalazione di Moderazione
+report.submit = Invio Segnalazione
+report.noReports = Non hai inviato alcuna segnalazione nell'ultimo anno
+report.awaiting = In attesa
+report.processing = In Elaborazione
+report.completed = Completato
+report.discarded = Rifiutato
+report.previousReports = Segnalazioni Precedenti
+report.warning.title = Attenzione
+report.warning.noGameTime = Questa segnalazione indica che il problema è accaduto in una partita, perfavore fornisci il codice game time del problema.
+report.warning.noOffender = Le segnalazioni devono includere un colpevole
+report.warning.noOffenderInGame = Il colpevole non sta giocando la partita indicata
+report.warning.noDescription = Le segnalazioni devono includere una segnalazione di problema
+report.warning.noPlayer = Lo username non è stato trovato tra i giocatori conosciuti
+report.warning.gameIdNotNumeric = L'ID replay deve essere un numero
+report.warning.noGame = L'ID replay non è stato trovato tra le partite
+report.error = Errore durante l'invio della segnalazione di moderazione
+management.maps.openButton.label = Gestisci mappe installate
+management.maps.closeButton.label = Chiudi
+management.maps.allMaps = Tutte le mappe
+management.maps.customMaps = Mappe personalizzate
+management.maps.officialMaps = Mappe ufficiali
+management.maps.uninstall.error = Impossibile disinstallare la mappa
+game.generateMap.commandLine = Argomenti Command Line
+game.generateMap.style = Stile Mappa
+game.mapGeneration.options.title = Lettura opzioni mappa (Versione\: {0})
+game.replayNotAvailable = File di replay non disponibile al momento
+game.filter.numberOfPlayers = Numero di giocatori
+game.filter.mapHeight = Altezza mappa, in km
+game.filter.mapWidth = Larghezza mappa, in km
+replay.couldNotParse = Non è stato possibile analizzare il replay.
+game.create.numTeams = Numero di Squadre
+teammatchmaking.searchAndInvite = Cerca e invita giocatori
+teammatchmaking.search.prompt = Nome
+teammatchmaking.search.noOneInvited = Non hai ancora invitato nessuno
+game.create.errorUpdatingMods = Non è stato possibile aggiornate le mod selezionate. Potrebbe dipendere da errori sui permessi dei file. Non selezionare le mod alla creazione della partita eliminerà questo errore.
+settings.data.mapAndModAutoUpdate = Auto aggiornamento Mappe e Mod
+settings.data.mapAndModAutoUpdate.description = Scarica automaticamente le versioni più recenti di una mappa o mod ospitando la mappa/mod. E' altamente consigliato tenere attiva questa opzione per ricevere bugfix e versioni funzionanti più recenti.
+player.info.rating = Valutazione\:
+modVault.recommended = Più selezionate dalle Squadre in M&M
+map.all = Tutte le Versioni
+map.current = Versione Corrente
+login.remember = Ricordami
+login.failed = Errore occorso durante il login
+login.badState = Lo stato ritornato dal servizio utente non coincide con lo stato inziale, se questo errore persiste perfavore contatta l'auto tecnico sul forum o sul canale discord
+login.oauthBaseUrl = OAuth URL base
+session.expired.title = Sessione Scaduta
+session.expired.message = Sessione scaduta, perfavore inserire i dati di login di nuovo
+login.error = Errore occorso durante il login, errore\: {0}; {1}
+discord.couldNotOpen = Non è stato possibile aprire il gioco da discord
