Update messages_ru.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -428,7 +428,7 @@ duration.seconds = {0,number,#}сек
 duration.minutesSeconds = \n{0,number,#}мин {1,number,#}с
 duration.hourMinutes = {0,number,#}ч {1,number,#}мин
 # suppress inspection "TrailingSpacesInProperty"
-vsSeparator = \ против 
+vsSeparator = u0020vsu0020
 # suppress inspection "TrailingSpacesInProperty"
 textSeparator = , 
 secondsAgo = {0,number,#} секунд назад
@@ -955,7 +955,13 @@ settings.data.clearCache = Очистить кэш
 settings.data.clearCache.description = Ещё не введено в данной версии. Помогите нам сделать эту кнопку\!
 settings.data.clearCache.button = Очистить кэш
 settings.general.cacheLifeTime = Файлы кэшированы на (в днях)\:
+# Context is needed. I never saw this in FAF. Is it an option in game settings?
+games.create.enforceRating = Обязательный рейтинг
 chat.filter.countryPrompt = Код страны
+game.generateMap.generationType = Тип генерации
+game.generateMap.casual = Обычный
+game.generateMap.tournament = Турнир
+game.generateMap.blind = Вслепую
 settings.date.system = Авто
 settings.date.mdy = Месяц/День/Год
 settings.date.dmy = День/Месяц/Год
@@ -967,23 +973,176 @@ mod.idNumber = \#{0}
 label.copy = Копировать
 settings.fa.allowReplayWhileInGame = Разрешить просмотр реплеев во время игры
 settings.fa.patchGamePrefs = Модифицировать game.prefs
+settings.fa.allowReplayWhileInGame.description = Если вы активируете экспериментальный функционал, вы сможете смотреть записи игр пока находитесь в игре. Кроме проверки почты вы должны активировать эту функцию в файле игровых предпочтений, если вы нажмёте кнопку ниже - мы сможем сделать это за вас. Если она отключена, ваш файл игровых предпочтений уже обновлён. Также помните, что запуск конфликтующих версий игры может стать причиной ошибок.
+settings.fa.patchGamePrefsFailed = Ошибка при обновлении файла предпочтений для игры
 settings.fa.allowReplayWhileInGame.experimental = Экспериментальная
+error.game.filesNotAccessible = Некоторые файлы установленной игры не могут быть скопированы через FAF, но если вы недавно модифицировали файлы игры в установленной версии, вам вероятно всё равно. Мы всё равно запускаем игру для вас.
+game.gameRunning = Игра не может быть запущена, так как копия игры Forged Alliance уже запущена
+replay.gameRunning = Запись игры не может быть открыта потому что Forged Alliance уже запущен. Вы можете включить экспериментальную опцию для просмотра записей игр, пока вы в лобби, в настройках.
+gameUpdate.error.gameNotWritableAllowMultiOn = Эта игра не может быть обновлена до требуемой версии для запуска игры. Вы пытаетесь посмотреть запись игры или открыть игру в конфликтующих версиях с той, которая у вас уже открыта.
+game.create.generationType = Виды генерации карт\:\nКазуальный - Предпросмотра карты нет\nТурнир - Настройки войск случайны, предпросмотра карты в клиенте нет, тайм-коды появятся в описании карты.\nВслепую - Настройки войск случайны, предпросмотра карты в клиенте и в лобби нет, тайм-коды появятся в описании карты.\nНеисследованная - Территория карты и ресурсы нужно исследовать юнитами.
 chat.userColor = Цвет
 review.currentVersion = Текущая версия
 review.version = Версия {0}
+review.date = {0} на {1}
+modVault.upload.rules = Я подтверждаю, что я прочитал правила о загрузке модов
+saveQuery = Сохранить запрос
+logical = Расширенный поиск
+filter = Фильтрованный поиск
 main.replay = Реплеи
 main.maps = Карты
 main.mods = Моды
+game.date = Дата игры
 game.onlyRanked = Только рейтинговые
 game.map.author = Автор карты
 vault.savedQueries = Избранное
 vault.saveQuery = Сохранить запрос
 map.onlyRanked = Только рейтинговые
+map.reviewScore = Обзор очков
 map.widthPixels = Ширина (в пикселях)
 map.heightPixels = Высота (в пикселях)
+query.moreFilters = Больше фильтров
+query.textFilter = {0}\: {1}
+query.categoryFilter = {0}\: {1}
+query.rangeFilter = {0}\: {1} to {2}
+query.dateRangeFilter = {0}\: от {1} к {2}
+query.afterDate = После
+query.beforeDate = До
+mod.onlyRanked = Только ранговый
+mod.reviewScore = Обзор очков
+search.lowValue = Минимум
+search.highValue = Максимум
+search.afterDate = Дата начала
+search.beforeDate = Дата окончания
+search.removeQuery = Отменить запрос
+game.globalRating = Глобальный рейтинг
+game.ladderRating = Ступенчатый рейтинг
+leaderboard.divisionName = На позиции
+play.teamMatchmaking = Подбор игр
+teammatchmaking.leaveParty = Покинуть группу
+teammatchmaking.invitePlayer = Пригласить игроков
+teammatchmaking.invite = Пригласить
+teammatchmaking.invitedPlayers = Приглашённые игроки
+teammatchmaking.mapPool = Список карт
+teammatchmaking.playersInQueue = В очереди\: {0,number,#}
+teammatchmaking.queuePopTimer = Начало через\: {0,number,0}\:{1,number,00}
+teammatchmaking.gameCount = Игр сыграно\: {0,number,#}
+teammatchmaking.notification.invite.title = Приглашён в группу
+teammatchmaking.notification.invite.message = {0} пригласил вас в свою группу
+teammatchmaking.notification.invite.join = Войти
+teammatchmaking.match.found = Игра найдена\!
+teammatchmaking.match.starting = Игра запускается...
+teammatchmaking.match.cancelled = Игра закрыта\!
+teammatchmaking.notification.matchFound.title = Игра найдена
+teammatchmaking.notification.matchFound.message = Игра найдена и скоро будет запущена
+teammatchmaking.notification.inviteAlreadyInQueue.title = Вы уже находитесь в очереди
+teammatchmaking.notification.inviteAlreadyInQueue.message = Пожалуйста, покиньте все очереди перед приглашением игрока
+teammatchmaking.notification.joinAlreadyInQueue.title = Вы уже в очереди
+teammatchmaking.notification.joinAlreadyInQueue.message = Пожалуйста, покиньте очередь перед вступлением в группу
+teammatchmaking.notification.customAlreadyInQueue.title = Вы уже в очереди на подборку игры
+teammatchmaking.notification.customAlreadyInQueue.message = Пожалуйста, покиньте все очереди перед запуском произвольной игры
+teammatchmaking.notification.gameAlreadyRunning.title = Уже находится в игре
+teammatchmaking.notification.gameAlreadyRunning.message = Вы не можете присоединиться к очереди пока вы в игре
+teammatchmaking.playerTitle = Играть произвольную игру за\:
+teammatchmaking.partyTitle = Ваша группа\:
+teammatchmaking.queueTitle = Присоединяйтесь к другим очередям, когда будете готовы
+teammatchmaking.queueTitle.inGame = Невозможно присоединиться к очереди пока вы в игре
+teammatchmaking.queueTitle.memberInGame = Вы не можете присоединиться к очереди пока кто-то в игре
+teammatchmaking.queueTitle.inParty = Лидер группы может подключаться к очередям
+teammatchmaking.queueTitle.inQueue = Ваша группа теперь в очереди
+teammatchmaking.queue.ladder1v1 = 1v1 очередь
+teammatchmaking.queue.tmm2v2 = 2v2 очередь
+chat.groupChat.playerDisconnect = {0} был отключён
+chat.groupChat.playerConnect = {0} был присоединён
+game.generateMap.mexSlider = Мас.Экс.
+game.generateMap.reclaimSlider = Утилизация
+game.generateMap.unexplored = Неисследованно
+replay.enrich.error = Информация не может быть скачана
+review.delete.error = Этот отзыв не может быть удалён
+review.save.error = Этот отзыв не может быть сохранён
+settings.general.debugLog = Включить Дебаг авторизации
+settings.general.debugLog.description = Повысьте уровень Лог'ов до DEBUG для диагностики
+settings.general.debugLog.button = Старт
+replay.inQueue = Запись игры не может быть запущена, потому что вы в очереди на подбор игры. Выйдите из очереди для просмотра.
+replay.inParty = Запись игры не может быть запущена, потому что вы в группе. Выйдите из группы для просмотра.
+leaderboard.tmm_2v2.name = 2v2
+leaderboard.ladder_1v1.name = 1v1
+leaderboard.global.name = Глобальный
+leaderboard.gamesPlayed = {0} Игр сыграно\: {1,number,#}
+leaderboard.rating = {0} Рейтинг
+leaderboard.displayName = Таблица лидеров
+userInfo.tooltipFormat.withRating = \n{0} ({1,number,#})
+userInfo.tooltipFormat.noRating = {0}
+map.updater.search = Поиск новой версии этой карты
+teammatchmaking.chat.topic = Найдите напарников и получите помощь по игре в нашем официальном дискорде\:
+getHelp = Получить помощь
+copyError = Копировать ошибку
+findHelp = Если эта ошибка продолжится, используйте кнопку "Получить помощь" чтобы открыть форум. Прочитайте FAQ и предыдущие темы на форуме. Если вы создаёте новую тему, добавьте туда логи вашей игры, которые можно открыть из меню в верхнем левом углу клиента игры.
+game.crash = Похоже что Supreme Commander\: Forged Alliance вылетела, проверьте лог игры {0} для подробной информации
+replayNotAvailable = Запись игры {0,number,#} не доступна с сервера. Попробуйте позже.
+close = Закрыть
+userMenu.moderationReport = Запросы на модерацию
+game.report = Пожаловаться на игру
+report.description.placeholder = Пожалуйста, коротко но ёмко опишите нарушение, на которое вы жалуетесь. Если прямой записи нарушения нет (записи игры или чата), пожалуйста предоставьте скриншот нарушения. Используйте любой сайт-хостинг фото, например http\://imgur.com/.
+report.description = Жалоба на нарушение
+report.id = ID
+report.createTime = Создан в
+report.offender = Нарушитель
+report.moderator = Модератор
+report.notice = Примечание
+report.status = Статус
+report.gameID = ID записи игры
+report.gameTime = Отметка времени в игре
+report.gamePrompt = (Если проблема произошла в игре)
+report.userSearch = Нарушитель
+report.title = Запросы на модерацию
+report.newReport = Новые запросы на модерацию
+report.submit = Подтвердить жалобу
+report.noReports = Вы не предлагали жалоб в течение прошлого года
+report.awaiting = Ожидание
+report.processing = Обработка
+report.completed = Завершено
+report.discarded = Отклонено
+report.previousReports = Предыдущие жалобы
+report.warning.title = Предупреждение
+report.warning.noGameTime = В жалобе указано, что нарушение произошло в игре. Пожалуйста, укажите временную отметку нарушения.
+report.warning.noOffender = Жалобы должны включать нарушителя
+report.warning.noOffenderInGame = Нарушитель не играет в отмеченной игре
+report.warning.noDescription = Жалоба должна включать описание нарушения
+report.warning.noPlayer = Имя пользователя не существует
+report.warning.gameIdNotNumeric = ID записи игры должен быть в виде цифр
+report.warning.noGame = ID записи игры не существует
+report.error = Ошибка при подтверждении жалобы
+management.maps.openButton.label = Управление установленными картами
+management.maps.closeButton.label = Закрыть
+management.maps.allMaps = Все карты
+management.maps.customMaps = Пользовательские карты
+management.maps.officialMaps = Официальные карты
+management.maps.uninstall.error = Невозможно удалить карту
 game.generateMap.commandLine = Аргументы командной строки
+game.generateMap.style = Стиль карты
+game.mapGeneration.options.title = Получение настроек карты (Version\: {0})
+game.replayNotAvailable = Файл записи игры недоступен сейчас
 game.filter.numberOfPlayers = Количество игроков
 game.filter.mapHeight = Высота карты, в км.
 game.filter.mapWidth = Ширина карты, в км.
+replay.couldNotParse = Запись игры не может быть обработана
+game.create.numTeams = Число команд
+teammatchmaking.searchAndInvite = Найти и пригласить игроков
+teammatchmaking.search.prompt = Имя
+teammatchmaking.search.noOneInvited = Вы ещё никого не пригласили
+game.create.errorUpdatingMods = Невозможно обновить выбранные моды. Это возможное из-за ошибки в файлах доступа. Также отказ от данного мода в создании игры может убрать ошибку.
 settings.data.mapAndModAutoUpdate = Автообновление карт и модов
+settings.data.mapAndModAutoUpdate.description = Автоматически скачивает новейшую версию карты или мода для создания игр. Эта опция крайне рекомендована для лечения ошибок и получения новейших рабочих версий.
 player.info.rating = Рейтинг\:
+modVault.recommended = Лучшие карты от команды M&M
+map.all = Все версии
+map.current = Нынешняя версия
+login.remember = Запомнить меня
+login.failed = Ошибка авторизации
+login.badState = Состояние, возвращаемое пользовательской службой, не соответствует исходному состоянию. Если эта проблема продолжится, вы можете получить техническую помощь на форуме или в дискорд канале.
+login.oauthBaseUrl = Ссылка на базу OAuth 
+session.expired.title = Сессия истекла
+session.expired.message = Сессия истекла, пожалуйста, введите детали входа ещё раз
+login.error = Ошибка из-за ошибки входа\: {0}; {1}
+discord.couldNotOpen = Невозможно открыть игру из дискорда
