Add league display in matchmaker tab

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1008,6 +1008,7 @@ leagues.divisionName.4 = Diamond
 leagues.divisionName.5 = Master
 leagues.divisionName.6 = Grandmaster
 play.teamMatchmaking = Matchmaking
+teammatchmaking.inPlacement = In Placement
 teammatchmaking.searchAndInvite=Search and invite players
 teammatchmaking.search.prompt=Name
 teammatchmaking.search.noOneInvited=You have not invited anybody yet
