--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -994,12 +994,12 @@ leaderboard.TMM2v2League = 2v2 League
 leaderboard.team = Team League
 leaderboard.season.1v1League.season.2 = 1v1 Testseason 2
 leaderboard.season.2v2League.season.2 = 2v2 Testseason 2
-leaderboard.searchPrompt = Search player or rank...
+leaderboard.searchPrompt = Search player or rank
 leaderboard.score = Score
 leaderboard.rank = Rank \#{0,number,#} out of {1,number,#} players
 leaderboard.totalPlayers = {0,number,#} players
 leaderboard.divisionName = {0} {1}
-leaderboard.placement = The System is still learning you. {0} out of {1} games played
+leaderboard.placement = The System is still learning you. You have played {0} games
 leaderboard.noEntry = Play matchmaker games to get assigned to a division
 leagues.divisionName.1 = Bronze
 leagues.divisionName.2 = Silver
