--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1076,3 +1076,5 @@ login.offlineServices.title = Some services are currently offline
 login.offlineService.text = ''{0}'' has been offline for {1}. {2}.
 reasonUnknown = Reason unknown
 temporalRange = From {0} until {1}
+offline.noExe = Game was not found in the FAF Data directory. In order to play offline you must login at least once and download the necessary FAF files.
+offline.error = There was an error trying to launch the game
