Update messages_cs.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -641,7 +641,7 @@ tournament.noStartingDate = Nestanoveno datum zahájení
 tournament.noCompletionDate = ještě nedokončen
 loading = Načítání...
 # Could I have a little more context to this, where its used?
-updater.readingFileList = Čtetí souborů
+updater.readingFileList = Čtení souborů
 secondAgo = před {0,number,#} sekundy
 vault.maps.searchError = Mapy nešly načíst
 settings.notifications.displayNotification = Zobrazit oznámení
