Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -139,8 +139,8 @@ clan.leader = Chef
 clan.clanMembers = Membres
 clan.messageLeader = Contacter le chef du clan
 clan.visitPage = Visiter le site web du clan
-chat.privateMessage.playerLeft = {0} est hors ligne
-chat.privateMessage.playerReconnect = {0} est en ligne de nouveau
+chat.privateMessage.playerLeft = {0} est déconnecté
+chat.privateMessage.playerReconnect = {0} est connecté de nouveau
 chat.privateMessage.globalRating = Niveau global
 chat.privateMessage.ladder1v1Rating = Niveau 1c1
 chat.privateMessage.ratingFormat = {0,number,#}
@@ -818,7 +818,7 @@ vault.searchError = Une erreur est survenue durant la recherche.
 vault.upload = Envoyer...
 replay.team = Equipe {0}
 replay.noTeam = Pas d'équipe
-search.perPage = Items par Page
+search.perPage = Eléments par page
 game.generateMap = Générer une nouvelle carte
 game.generateMap.recreate = Regénérer une carte avec le nom de carte suivant \:
 game.generateMap.generateNew = Générer une nouvelle carte avec les options suivantes \:
@@ -902,7 +902,7 @@ exitWarning.message = Forged Alliance est toujours en cours d'exécution, êtes-
 chat.userContext.broadcast = Diffuser un message...
 corruptedModsError.notification = Une erreur inattendue a empêché le client de charger le mod suivant \: {0}
 settings.data = Données et cache
-settings.data.gameDataCache.time = Validité des données de jeu en cache en jours.
+settings.data.gameDataCache.time = Validité des données de jeu en cache en jours
 settings.data.gameDataCache.time.description = Définit la durée pendant laquelle les fichiers de jeu sont gardés en cache. Régler sur une longue durée pour réduire les téléchargements. Régler sur une courte durée pour préserver l'espace disque.
 settings.data.gameDataCache = Cache des données de jeu
 settings.data.gameDataCache.description = Mettre les données de jeu en cache pour les versions non utilisées. Réduit significativement le nombre de fichiers téléchargés, particulièrement lors de l'accès à d'anciennes rediffusions.
@@ -1007,7 +1007,7 @@ teammatchmaking.notification.gameAlreadyRunning.title = Partie en cours
 teammatchmaking.notification.gameAlreadyRunning.message = Vous ne pouvez pas rejoindre une file d'attente quand vous êtes en cours de partie
 teammatchmaking.playerTitle = Recherche de partie en tant que \:
 teammatchmaking.partyTitle = Votre équipe \:
-teammatchmaking.queueTitle = Rejoignez une ou plusieurs files d'attente quand vous êtes prêts \:
+teammatchmaking.queueTitle = Rejoignez une ou plusieurs files quand vous êtes prêts \:
 teammatchmaking.queueTitle.inGame = Impossible de rejoindre une file d'attente quand vous êtes en cours de partie
 teammatchmaking.queueTitle.memberInGame = Impossible de rejoindre une file d'attente quand quelqu'un est en cours de partie
 teammatchmaking.queueTitle.inParty = Le chef d'équipe rejoint les files d'attente
@@ -1032,7 +1032,7 @@ leaderboard.ladder_1v1.name = 1c1
 leaderboard.global.name = Global
 leaderboard.gamesPlayed = {0} Parties jouées \: {1,number,#}
 # Fuzzy
-leaderboard.rating = {0} Niveau(x)
+leaderboard.rating = {0} Niveau
 leaderboard.displayName = Classement
 userInfo.tooltipFormat.withRating = {0} ({1,number,#})
 userInfo.tooltipFormat.noRating = {0}
@@ -1110,3 +1110,7 @@ session.expired.title = Session expirée
 session.expired.message = Session expirée, veuillez re-saisir vos informations de connexion
 login.error = Erreur durant la connexion (Erreur \: {0} ; {1})
 discord.couldNotOpen = Impossible de rejoindre une partie depuis Discord
+login.offlineServices.title = Certains services sont actuellement hors ligne
+login.offlineService.text = ''{0}'' est hors ligne depuis {1}. {2}.
+reasonUnknown = Raison inconnue
+temporalRange = De {0} à {1}
