Add ability to start games offline and remove mock services (#2353)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -243,6 +243,7 @@ login.forgot = Forgot login
 login.button.login = Login
 login.button.cancel = Cancel
 login.progress.message = Logging in…
+login.playOffline = Play Offline
 login.remember = Remember Me
 login.failed = Error occurred during login
 login.badState = State returned by user service does not match initial state if this continues to occur please reach out to technical help on the forum or discord channel
@@ -1075,3 +1076,5 @@ login.offlineServices.title = Some services are currently offline
 login.offlineService.text = ''{0}'' has been offline for {1}. {2}.
 reasonUnknown = Reason unknown
 temporalRange = From {0} until {1}
+offline.noExe = Game was not found in the FAF Data directory. In order to play offline you must login at least once and download the necessary FAF files.
+offline.error = There was an error trying to launch the game
