Implement improved error logging and user notifications
Remove usages of SneakyThrows and NoCatch
add global exception handler
add buisness exceptions

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -266,7 +266,7 @@ vault.replays.searchError = An error has occurred while searching for replays.
 vault.more=More…
 modVault.recommended=M&M Team Top Picks
 modVault.newestMods=Most recent
-modVault.install = Install
+modVault.installButtonFormat = Install ({0})
 modVault.uninstall = Uninstall
 modVault.installationFailed = Mod ''{0}'' could not be installed\: {1}
 modVault.couldNotDeleteMod = Mod ''{0}'' could not be deleted\: {1}
@@ -331,6 +331,13 @@ map.width = Width
 map.height = Height
 map.uploadedDateTime = Uploaded
 map.updatedDateTime = Updated
+map.download.error = Error occurred while downloading {0}
+map.load.notAFolder = Object in map vault is not a folder {0}
+map.load.noScenario = Map folder does not contain a *_scenario.lua file {0}
+map.load.ioError = Map could not be read {0}
+map.load.luaError = Map contains invalid lua {0}
+map.preview.generateError = Could not generate preview from {0}
+map.directory.couldNotOpen = Could not open maps directory
 mapPreview.name = Map Name\: {0}
 mapPreview.size = {0,number,#}km x {1,number,#}km
 mapPreview.loadFailure.message = Map preview could not be loaded
@@ -392,11 +399,13 @@ user.status.playing = Playing\: {0}
 achievement.stepsFormat = {0,number,#}/{1,number,#}
 achievements.mostRecent = Most recent
 achievements.loading = Loading achievements…
+achievements.load.badUrl = Could not load achievement due to bad url: {0}
 achievements.unlocked = Unlocked ({0,number,#})
 achievements.locked = Open ({0,number,#})
 replayServer.listeningFailed = Replay server could not be started
 replayServer.retry = Retry
 replayServer.unreachable = Replay server is not reachable, game can't be recorded.
+replayServer.stopError = Replay server could not be closed
 corruptedMods.notification = Mod is corrupt and can''t be loaded\: {0}.
 corruptedMods.show = Show
 corruptedReplayFiles.notification = There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
@@ -524,6 +533,9 @@ ranked1v1.you = You
 game.join.passwordTitle = This game is password protected
 modVault.highestRated = Highest rated
 modVault.highestRatedUiMods = Recommended UI mods
+mod.load.ioError = Mod could not be read {0}
+mod.load.luaError = Mod contains invalid lua {0}
+map.load.noModInfo = Mod contains no modInfo.lua {0}
 mod.detail.reviews = Reviews
 mod.detail.moreInfo = More information
 mod.detail.updated = Updated
@@ -556,6 +568,8 @@ mod.type = Type
 mod.ranked = Ranked
 mod.filename = Filename
 mod.version = Version
+mod.upload.error = Mod could not be read
+mod.errorUpdatingMods = Could not update mod states in game.prefs
 UIDNotExecuted = UID binary could not be executed. It might have been removed, not found or inaccessible.
 replay.copyUrl = Copy replay URL
 game.showRatingChange = Show rating change
@@ -620,6 +634,7 @@ tournament.status.openForRegistration = Open for registration
 tournament.status.closedForRegistration = Closed for registration
 tournament.noStartingDate = no starting date set
 tournament.noCompletionDate = not completed yet
+tournament.viewNotLoaded = Tournament view could not be loaded
 loading = Loading…
 updater.readingFileList = Reading file list
 secondAgo = {0,number,#} second ago
@@ -748,6 +763,7 @@ replay.ignoreMapNotFound = Ignore and start replay
 replay.abortAfterMapNotFound = Abort and show more info
 replay.mapDownloadFailed = Map download failed for this replay
 replay.mapDownloadFailed.wannaContinue = We could not find the map mentioned in the replay file. However the game might still know where to find it. Consider this as a warning, that this replay might be broken.
+replay.live.startError = Could not start live replay
 map.unknown = unknown
 settings.account.goWebsite = For account related activities you need to visit our website
 settings.account.goWebsiteButton = Visit the FAForever Website
@@ -802,6 +818,13 @@ modVault.modManager = Manage active mods
 modVault.manageMods = Manage active mods
 theme.needsRestart.message = Changing the theme to ''{0}'' might require a restart.
 theme.needsRestart.quit = Quit
+theme.webView.stylesheet.loadError = StyleSheet at {0} could not be loaded
+theme.directory.readError = Directory of theme {0} can not be read
+theme.webview.stylesheet.couldNotLoad = Webview stylesheet could not be read {0}
+theme.couldNotLoad = Themes could not be loaded\: {0}
+theme.couldNotLoadImage = Could not load image {0} for theme
+theme.couldNotWatch = Theme directory could not be watched for changes
+theme.stylesheets.couldNotGet = Could not load theme stylesheets
 vault.loading = Loading...
 vault.displayQuery = Display search query
 vault.queryPrompt = Build a query above or enter one manually
@@ -914,6 +937,7 @@ settings.date.dmy = Day/Month/Year
 settings.chat.dateFormat = Date Format
 settings.chat.dateFormat.description = In which format the date should be displayed in the chat.
 chat.error.noHashTag = Channel Name must start with \# (Try \#{0})
+chat.message.addError = Could not add message to chat
 game.gameStatus.hosting = Hosting
 mod.idNumber = \#{0}
 label.copy = copy
@@ -1077,6 +1101,8 @@ game.replayNotAvailable = Replay file not available at this time
 game.filter.numberOfPlayers = Number of players
 game.filter.mapHeight = Map height, in km
 game.filter.mapWidth = Map width, in km
+game.files.binaryCopyError = Could not copy binary files from {0} to {1}
+game.files.updateError = Could not update binary files for {0}
 player.info.rating = Rating:
 login.offlineServices.title = Some services are currently offline
 login.offlineService.text = ''{0}'' has been offline for {1}. {2}.
@@ -1084,5 +1110,10 @@ reasonUnknown = Reason unknown
 temporalRange = From {0} until {1}
 offline.noExe = Game was not found in the FAF Data directory. In order to play offline you must login at least once and download the necessary FAF files.
 offline.error = There was an error trying to launch the game
+uid.generate.error = Cannot generate UID
+background.couldNotLoad = Could not load background image from {0}
+fxml.loadError = Could not load fxml view for {0}
+flag.loadError = Could not load flag for {0}
+view.couldNotLoad = Could not load view for {0} 
 matchmaker.cancelled = Matchmaker match cancelled by server due to lack of response from other players
 matchmaker.cancelled.title = Matchmaker game cancelled
