Add date range for seasons

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -992,8 +992,11 @@ game.ladderRating = Ladder Rating
 leaderboard.Ladder1v1League = 1v1 League
 leaderboard.TMM2v2League = 2v2 League
 leaderboard.team = Team League
-leaderboard.season.1v1League.season.2 = 1v1 Testseason 2
-leaderboard.season.2v2League.season.2 = 2v2 Testseason 2
+leaderboard.season.1v1League.season.1 = 1v1 Season 1
+leaderboard.season.2v2League.season.1 = 2v2 Season 1
+leaderboard.season.1v1League.season.2 = 1v1 Season 2
+leaderboard.season.2v2League.season.2 = 2v2 Season 2
+leaderboard.seasonDate = {0} – {1}
 leaderboard.searchPrompt = Search player or rank
 leaderboard.score = Score
 leaderboard.rank = Rank \#{0,number,#} out of {1,number,#} players
