--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -771,7 +771,7 @@ startTab.configure = Configure
 vault.replays.onlyShowLastYear = Only from last year
 game.create.spawnCount=Number of Spawns
 game.create.numTeams=Number of Teams
-game.create.mapSize=Map Size
+game.create.mapSize=Map Size (km)
 game.generate = Generate new map
 game.generate.recreate = Regenerate map using the following map name\:
 game.generate.generateNew = Generate a new map using the following options\:
